Fix negative bounding rects on mobile device

--- a/views/components/App/styles.css
+++ b/views/components/App/styles.css
@@ -9,8 +9,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #050505;
   z-index: -10;
 }
@@ -19,7 +19,7 @@
   flex: 1 0;
   flex-basis: unset;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   line-height: 1.5;
   display: flex;
   flex-direction: column;
